; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_chunk_rename_schema_name.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_chunk.c_chunk_rename_schema_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_9__*, i32, i32 }
%struct.TYPE_9__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@SCAN_CONTINUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i8*)* @chunk_rename_schema_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chunk_rename_schema_name(%struct.TYPE_7__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_8__, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %9, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @chunk_formdata_fill(%struct.TYPE_8__* %5, %struct.TYPE_9__* %10, i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %5, i32 0, i32 0
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @namestrcpy(i32* %15, i8* %16)
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @chunk_formdata_make_tuple(%struct.TYPE_8__* %5, i32 %20)
  store i32 %21, i32* %6, align 4
  %22 = call i32 (...) @ts_catalog_database_info_get()
  %23 = call i32 @ts_catalog_database_info_become_owner(i32 %22, i32* %7)
  %24 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @ts_catalog_update_tid(i32 %26, i32* %30, i32 %31)
  %33 = call i32 @ts_catalog_restore_user(i32* %7)
  %34 = load i32, i32* %6, align 4
  %35 = call i32 @heap_freetuple(i32 %34)
  %36 = load i32, i32* @SCAN_CONTINUE, align 4
  ret i32 %36
}

declare dso_local i32 @chunk_formdata_fill(%struct.TYPE_8__*, %struct.TYPE_9__*, i32) #1

declare dso_local i32 @namestrcpy(i32*, i8*) #1

declare dso_local i32 @chunk_formdata_make_tuple(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @ts_catalog_database_info_become_owner(i32, i32*) #1

declare dso_local i32 @ts_catalog_database_info_get(...) #1

declare dso_local i32 @ts_catalog_update_tid(i32, i32*, i32) #1

declare dso_local i32 @ts_catalog_restore_user(i32*) #1

declare dso_local i32 @heap_freetuple(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
